--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 ansi2html==1.8.0
 asttokens==2.1.0
 backcall==0.2.0
-Bottleneck @ file:///C:/Windows/Temp/abs_3198ca53-903d-42fd-87b4-03e6d03a8381yfwsuve8/croots/recipe/bottleneck_1657175565403/work
+Bottleneck==1.3.5
 category-encoders==2.5.1.post0
-certifi @ file:///C:/b/abs_ac29jvt43w/croot/certifi_1665076682579/work/certifi
+certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.6
@@ -34,9 +34,9 @@ itsdangerous==2.1.2
 jedi==0.18.2
 Jinja2==3.1.2
 joblib==1.2.0
-jupyter-dash==0.4.2
 jupyter_client==7.4.7
 jupyter_core==5.1.0
+jupyter-dash==0.4.2
 jupyterlab-widgets==3.0.3
 kaleido==0.2.1
 kiwisolver==1.4.4
@@ -46,19 +46,20 @@ MarkupSafe==2.1.1
 matplotlib==3.6.2
 matplotlib-inline==0.1.6
 mkl-fft==1.3.1
-mkl-random @ file:///C:/ci/mkl_random_1626186184278/work
+mkl-random==1.2.2
 mkl-service==2.4.0
 nest-asyncio==1.5.6
 numba==0.56.4
-numexpr @ file:///C:/b/abs_a7kbak88hk/croot/numexpr_1668713882979/work
+numexpr==2.8.4
 numpy==1.22.4
 orjson==3.8.2
-packaging @ file:///tmp/build/80754af9/packaging_1637314298585/work
-pandas @ file:///C:/b/abs_97pwvlq0kg/croot/pandas_1668631294821/work
+packaging==21.3
+pandas==1.5.1
 parso==0.8.3
 patsy==0.5.3
 pickleshare==0.7.5
 Pillow==9.3.0
+pip==22.2.2
 platformdirs==2.5.4
 plotly==5.11.0
 plotly-resampler==0.8.2
@@ -67,12 +68,12 @@ polygon-api-client==1.0.2
 prompt-toolkit==3.0.33
 psutil==5.9.4
 pure-eval==0.2.2
-pycaret @ git+https://github.com/pycaret/pycaret.git@18f75c06d3bcbacc1ccb0b073b40a57638cabac0
+pycaret==3.0.0rc4
 Pygments==2.13.0
 pyod==1.0.6
-pyparsing @ file:///C:/Users/BUILDE~1/AppData/Local/Temp/abs_7f_7lba6rl/croots/recipe/pyparsing_1661452540662/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
-pytz @ file:///C:/Windows/TEMP/abs_90eacd4e-8eff-491e-b26e-f707eba2cbe1ujvbhqz1/croots/recipe/pytz_1654762631027/work
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2022.1
 pywin32==305
 pyzmq==24.0.1
 requests==2.28.1
@@ -81,7 +82,8 @@ schemdraw==0.15
 scikit-learn==1.1.3
 scikit-plot==0.3.7
 scipy==1.9.3
-six @ file:///tmp/build/80754af9/six_1644875935023/work
+setuptools==65.5.0
+six==1.16.0
 sktime==0.14.0
 SQLAlchemy==1.4.39
 stack-data==0.6.2
@@ -97,6 +99,7 @@ urllib3==1.26.13
 wcwidth==0.2.5
 websockets==10.4
 Werkzeug==2.1.2
+wheel==0.37.1
 widgetsnbextension==4.0.3
 wincertstore==0.2
 wrapt==1.14.1
