--- a/requirements.txt
+++ b/requirements.txt
@@ -82,6 +82,7 @@ schemdraw==0.15
 scikit-learn==1.1.3
 scikit-plot==0.3.7
 scipy==1.9.3
+seaborn==0.12.1
 setuptools==65.5.0
 six==1.16.0
 sktime==0.14.0
